[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tango-13"
version = "0.1.0"
description = "Temporal-orchestrated sandbox execution service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic-settings",
  "temporalio",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "sandbox_executor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
